tests/sksl/errors/golden/OpaqueTypeInInterfaceBlock.glsl
### Compilation failed:

error: 1: opaque type 'sampler' is not permitted in an interface block
1 error
